--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,4 +1,7 @@
 @import "tailwindcss";
+@import "@fontsource-variable/inter";
+@import "@fontsource-variable/inconsolata";
+
 
 :root {
 	/* Colors */
