--- a/src/components/sections/Hero.astro
+++ b/src/components/sections/Hero.astro
@@ -68,16 +68,16 @@ const printInfo = [
         {printInfo}
       </footer>
       <footer
-        class="no-print flex justify-center items-center gap-2 text-[rgb(var(--light),0.65)]"
+        class="no-print flex justify-center items-center gap-2 text-[rgb(var(--light),0.45)]"
       >
         <h3
-          class="font-[family-name:var(--mono)] text-[clamp(0.875rem,0.838rem_+_0.1852vw,1rem)] font-extralight tracking-tighter text-shadow-[0_0_8px_rgb(var(--primary),0.85)]"
+          class="font-[family-name:var(--mono)] text-[clamp(0.875rem,0.838rem_+_0.1852vw,1rem)] font-extralight tracking-tighter text-shadow-[0_0_8px_rgb(var(--primary),0.85)] hidden"
         >
           Sígueme:
         </h3>
         <div
-          class="hero-links flex items-center gap-4 [&>a]:inline-flex [&>a]:items-center [&>a]:justify-center [&>a]:size-8 [&>a]:border [&>a]:border-[rgb(var(--light),0.15)] [&>a]:rounded-full [&>a]:bg-[rgb(var(--primary),0.1)] [&>a]:hover:bg-[rgb(var(--light),0.25)]
-          [&>a]:hover:text-[rgb(var(--primary),0.85)] [&>a]:transition-all [&>a]:duration-300 [&>a]:ease"
+          class="hero-links flex items-center gap-4 [&>a]:inline-flex [&>a]:items-center [&>a]:justify-center [&>a]:size-8 [&>a]:border-2 [&>a]:border-[rgb(var(--primary),0.15)] [&>a]:rounded-full [&>a]:bg-[rgb(var(--light),0.05)] [&>a]:hover:bg-[rgb(var(--light),0.10)] [&>a]:text-[rgb(var(--primary),0.65)]
+          [&>a]:hover:text-[rgb(var(--light),0.65)] [&>a]:transition-all [&>a]:duration-300 [&>a]:ease"
         >
           {
             email && (
