Revision de css

--- a/src/components/HeaderLink.astro
+++ b/src/components/HeaderLink.astro
@@ -31,8 +31,8 @@ const isActive = href === pathname || href === "/" + (subpath?.[0] || "");
     &.active {
       color: rgb(var(--primary), 0.65);
       text-shadow: 0 0 8px rgb(var(--primary), 0.65);
-      text-decoration: underline;
-      text-underline-offset: 2px;
+      /* text-decoration: underline; */
+      /* text-underline-offset: 4px; */
     }
   }
 </style>
