--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -4,23 +4,14 @@ import Logo from "../icons/Logo.astro";
 ---
 
 <header
-  class="font-[family-name:var(--body)] text-[rgb(var(--light),0.45)] sticky top-0 z-20 bg-[rgb(var(--primary),0.1)] backdrop-blur-md backdrop-saturate-150 shadow-[0_0_15px_rgb(var(--primary),0.1)] w-full bg-linear-to-br from-[rgb(var(--dark),0.20)] via-[rgb(var(--primary),0.05)] to-[rgb(var(--black),0.20)] border-b border-[rgb(var(--primary),0.05)] mb-[36px] md:mb-[72px]"
+  class="font-[family-name:var(--body)] text-[rgb(var(--light),0.55)] sticky top-0 z-20 bg-[rgb(var(--black),0.20)] backdrop-blur-md backdrop-saturate-150 shadow-[0_0_15px_rgb(var(--primary),0.1)] w-full bg-linear-to-br from-[rgb(var(--dark),0.20)] via-[rgb(var(--primary),0.05)] to-[rgb(var(--black),0.20)] border-b border-[rgb(var(--primary),0.05)] mb-[36px] md:mb-[56px]"
 >
   <section
     class="max-w-[700px] p-4 md:px-0 flex flex-row flex-wrap items-center justify-between md:mx-auto"
   >
-    <a
-      href="/"
-      class="logo flex items-center transition-all duration-300 ease-in-out text-[rgb(var(--primary),0.85)] hover:text-[rgb(var(--light),0.85)] hover:text-shadow-[0_0_8px_rgb(var(--primary),0.45)] md:pr-2 md:border-r md:border-[rgb(var(--primary),0.25)]"
+    <nav
+      class="w-full flex flex-wrap items-center md:justify-center justify-between md:gap-8"
     >
-      <figure
-        class="hover:shadow-[0_0_8px_rgb(var(--primary),0.25)] rounded-full"
-      >
-        <Logo />
-      </figure>
-      <h2 class="text-2xl font-bold tracking-tighter ml-1">dinson.</h2>
-    </a>
-    <nav class="flex flex-wrap items-center justify-center md:gap-4 gap-6">
       <HeaderLink href="/blog">
         <svg
           xmlns="http://www.w3.org/2000/svg"
@@ -37,8 +28,9 @@ import Logo from "../icons/Logo.astro";
         >
         <span
           class="text-sm font-light uppercase tracking-tight hidden md:block"
-          >Blog</span
         >
+          Blog
+        </span>
       </HeaderLink>
       <HeaderLink href="/projects">
         <svg
@@ -57,6 +49,35 @@ import Logo from "../icons/Logo.astro";
         <span
           class="text-sm font-light uppercase tracking-tight hidden md:block"
           >Proyectos</span
+        >
+      </HeaderLink>
+      <a
+        href="/"
+        aria-label="Home"
+        class="logo flex items-center transition-all duration-300 ease-in-out text-[rgb(var(--primary),0.65)] hover:text-[rgb(var(--light),0.65)] hover:text-shadow-[0_0_8px_rgb(var(--primary),0.45)]"
+      >
+        <figure
+          class="hover:shadow-[0_0_8px_rgb(var(--primary),0.25)] rounded-full"
+        >
+          <Logo />
+        </figure>
+        <!-- <h2 class="text-2xl font-bold tracking-tighter ml-1">dinson.</h2> -->
+      </a>
+      <HeaderLink href="#">
+        <svg
+          xmlns="http://www.w3.org/2000/svg"
+          width="24"
+          height="24"
+          class="size-5"
+          viewBox="0 0 24 24"
+          style="fill: currentColor;transform: ;msFilter:;"
+          ><path
+            d="m2.344 15.271 2 3.46a1 1 0 0 0 1.366.365l1.396-.806c.58.457 1.221.832 1.895 1.112V21a1 1 0 0 0 1 1h4a1 1 0 0 0 1-1v-1.598a8.094 8.094 0 0 0 1.895-1.112l1.396.806c.477.275 1.091.11 1.366-.365l2-3.46a1.004 1.004 0 0 0-.365-1.366l-1.372-.793a7.683 7.683 0 0 0-.002-2.224l1.372-.793c.476-.275.641-.89.365-1.366l-2-3.46a1 1 0 0 0-1.366-.365l-1.396.806A8.034 8.034 0 0 0 15 4.598V3a1 1 0 0 0-1-1h-4a1 1 0 0 0-1 1v1.598A8.094 8.094 0 0 0 7.105 5.71L5.71 4.904a.999.999 0 0 0-1.366.365l-2 3.46a1.004 1.004 0 0 0 .365 1.366l1.372.793a7.683 7.683 0 0 0 0 2.224l-1.372.793c-.476.275-.641.89-.365 1.366zM12 8c2.206 0 4 1.794 4 4s-1.794 4-4 4-4-1.794-4-4 1.794-4 4-4z"
+          ></path></svg
+        >
+        <span
+          class="text-sm font-light uppercase tracking-tight hidden md:block"
+          >Tools</span
         >
       </HeaderLink>
       <HeaderLink href="/resume" target="_blank">
@@ -79,3 +100,25 @@ import Logo from "../icons/Logo.astro";
     </nav>
   </section>
 </header>
+
+<style>
+  span {
+    position: relative;
+    transition: all 0.3s ease;
+    &::after {
+      content: "";
+      position: absolute;
+      left: 0;
+      right: 0;
+      top: 100%;
+      height: 1px;
+      background-color: rgb(var(--primary));
+      transform: scaleX(0);
+      transition: 0.2s;
+      transform-origin: left;
+    }
+    &:hover::after {
+      transform: scaleX(1);
+    }
+  }
+</style>
