--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -4,7 +4,7 @@ import Logo from "../icons/Logo.astro";
 ---
 
 <header
-  class="font-[family-name:var(--body)] text-[rgb(var(--light),0.55)] sticky top-0 z-20 bg-[rgb(var(--black),0.20)] backdrop-blur-md backdrop-saturate-150 shadow-[0_0_15px_rgb(var(--primary),0.1)] w-full bg-linear-to-br from-[rgb(var(--dark),0.20)] via-[rgb(var(--primary),0.05)] to-[rgb(var(--black),0.20)] border-b border-[rgb(var(--primary),0.05)] mb-[36px] md:mb-[56px]"
+  class="font-[family-name:var(--body)] text-[rgb(var(--light),0.55)] sticky top-0 z-20 bg-[rgb(var(--black),0.20)] backdrop-blur-md backdrop-saturate-150 shadow-[0_0_25px_rgb(var(--black),0.45)] w-full bg-linear-to-br from-[rgb(var(--dark),0.20)] via-[rgb(var(--primary),0.05)] to-[rgb(var(--black),0.20)] border-b border-[rgb(var(--primary),0.05)] mb-[36px] md:mb-[56px]"
 >
   <section
     class="max-w-[700px] p-4 md:px-0 flex flex-row flex-wrap items-center justify-between md:mx-auto"
