update css rules

--- a/src/components/sections/Hero.astro
+++ b/src/components/sections/Hero.astro
@@ -118,6 +118,7 @@ const printInfo = [
 
 <style>
   article {
+    animation: fade-in-up .8s ease-in-out;
     header {
       h1 {
         background-image: linear-gradient(
@@ -172,7 +173,7 @@ const printInfo = [
         rgb(var(--accent)),        
         rgb(var(--primary))
       );
-      /* animation: rotate 3s linear infinite; */
+      animation: rotate 3s linear infinite;
     }
     figure::after {
       filter: blur(2rem);
