--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -7,10 +7,25 @@ import Logo from "../icons/Logo.astro";
   class="font-[family-name:var(--body)] text-[rgb(var(--light),0.55)] sticky top-0 z-20 bg-[rgb(var(--black),0.20)] backdrop-blur-md backdrop-saturate-150 shadow-[0_0_25px_rgb(var(--black),0.45)] w-full bg-linear-to-br from-[rgb(var(--dark),0.20)] via-[rgb(var(--primary),0.05)] to-[rgb(var(--black),0.20)] border-b border-[rgb(var(--primary),0.05)] mb-[36px] md:mb-[56px]"
 >
   <section
-    class="max-w-[700px] p-4 md:px-0 flex flex-row flex-wrap items-center justify-between md:mx-auto"
+    class="menu max-w-[700px] p-4 md:px-0 flex flex-row flex-wrap items-center justify-between md:mx-auto"
   >
+    <a
+      href="/"
+      class="logo flex items-center gap-1 transition-all duration-300 ease-in-out text-[rgb(var(--primary),0.65)] hover:text-[rgb(var(--light),0.65)] hover:text-shadow-[0_0_8px_rgb(var(--primary),0.45)]"
+    >
+      <figure
+        class="favicon rotacion hover:shadow-[0_0_8px_rgb(var(--primary),0.45)] rounded-full"
+      >
+        <Logo class="" />
+      </figure>
+      <h2
+        class="text-2xl font-semibold tracking-tighter sm:pr-1 sm:border-r sm:border-[rgb(var(--primary),0.25)]"
+      >
+        untaledinson...
+      </h2>
+    </a>
     <nav
-      class="w-full flex flex-wrap items-center md:justify-center justify-between md:gap-8"
+      class="flex flex-wrap items-center sm:justify-center justify-between gap-3 sm:gap-6"
     >
       <HeaderLink href="/blog">
         <svg
@@ -23,9 +38,8 @@ import Logo from "../icons/Logo.astro";
           ><path
             d="M19.875 3H4.125C2.953 3 2 3.897 2 5v14c0 1.103.953 2 2.125 2h15.75C21.047 21 22 20.103 22 19V5c0-1.103-.953-2-2.125-2zm0 16H4.125c-.057 0-.096-.016-.113-.016-.007 0-.011.002-.012.008L3.988 5.046c.007-.01.052-.046.137-.046h15.75c.079.001.122.028.125.008l.012 13.946c-.007.01-.052.046-.137.046z"
           ></path><path
-            d="M6 7h6v6H6zm7 8H6v2h12v-2h-4zm1-4h4v2h-4zm0-4h4v2h-4z"
-          ></path></svg
-        >
+            d="M6 7h6v6H6zm7 8H6v2h12v-2h-4zm1-4h4v2h-4zm0-4h4v2h-4z"></path>
+        </svg>
         <span
           class="text-sm font-light uppercase tracking-tight hidden md:block"
         >
@@ -51,18 +65,6 @@ import Logo from "../icons/Logo.astro";
           >Proyectos</span
         >
       </HeaderLink>
-      <a
-        href="/"
-        aria-label="Home"
-        class="logo flex items-center transition-all duration-300 ease-in-out text-[rgb(var(--primary),0.65)] hover:text-[rgb(var(--light),0.65)] hover:text-shadow-[0_0_8px_rgb(var(--primary),0.45)]"
-      >
-        <figure
-          class="hover:shadow-[0_0_8px_rgb(var(--primary),0.25)] rounded-full"
-        >
-          <Logo />
-        </figure>
-        <!-- <h2 class="text-2xl font-bold tracking-tighter ml-1">dinson.</h2> -->
-      </a>
       <HeaderLink href="#">
         <svg
           xmlns="http://www.w3.org/2000/svg"
@@ -102,6 +104,7 @@ import Logo from "../icons/Logo.astro";
 </header>
 
 <style>
+  @plugin '@midudev/tailwind-animations';
   span {
     position: relative;
     transition: all 0.3s ease;
@@ -121,4 +124,29 @@ import Logo from "../icons/Logo.astro";
       transform: scaleX(1);
     }
   }
+  .rotacion {
+    transition-property: transform;
+    transition-duration: 0.3s;
+    transition-delay: 0s;
+    &:hover {
+      transform: rotate(360deg);
+      color: rgb(var(--light), 0.65);
+    }
+  }
+  .menu {
+    animation: fade-in-left 0.6s ease-out;
+  }
+  .favicon{
+    animation: rotate-in .8s ease-out;
+  }
+  /* @keyframes fade-in-left {
+    0% {
+      opacity: 0;
+      transform: translateX(20px);
+    }
+    100% {
+      opacity: 1;
+      transform: translateX(0);
+    } 
+  }*/
 </style>
