--- a/src/components/sections/Skills.astro
+++ b/src/components/sections/Skills.astro
@@ -692,6 +692,9 @@ import Cog from "../../icons/Cog.astro";
 </Section>
 
 <style>
+  article{
+    animation: fade-in-right .8s ease-in-out;
+  }
   .stock-ticker {
     color: rgb(var(--light), 0.65);
     background-color: transparent;
