--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -3,15 +3,11 @@ import HeaderLink from "./HeaderLink.astro";
 import Logo from "../icons/Logo.astro";
 ---
 
-<header
-  class="font-[family-name:var(--body)] text-[rgb(var(--light),0.55)] sticky top-0 z-20 bg-[rgb(var(--black),0.20)] backdrop-blur-md backdrop-saturate-150 shadow-[0_0_25px_rgb(var(--black),0.45)] w-full bg-linear-to-br from-[rgb(var(--dark),0.20)] via-[rgb(var(--primary),0.05)] to-[rgb(var(--black),0.20)] border-b border-[rgb(var(--primary),0.05)] mb-[36px] md:mb-[56px]"
->
-  <section
-    class="menu max-w-[700px] p-4 md:px-0 flex flex-row flex-wrap items-center justify-between md:mx-auto"
-  >
+<header>
+  <section class="menu">
     <a
       href="/"
-      class="logo flex items-center gap-1 transition-all duration-300 ease-in-out text-[rgb(var(--primary),0.65)] hover:text-[rgb(var(--light),0.65)] hover:text-shadow-[0_0_8px_rgb(var(--primary),0.45)]"
+      class="logo flex items-center gap-1 transition-all duration-300 ease-in-out text-orange-400/65 hover:text-white/65 hover:text-shadow-[0_0_8px_rgb(var(--primary),0.45)] animate-fade-in-down"
     >
       <figure
         class="favicon rotacion hover:shadow-[0_0_8px_rgb(var(--primary),0.45)] rounded-full"
@@ -19,13 +15,13 @@ import Logo from "../icons/Logo.astro";
         <Logo class="" />
       </figure>
       <h2
-        class="text-2xl font-semibold tracking-tighter sm:pr-1 sm:border-r sm:border-[rgb(var(--primary),0.25)]"
+        class="text-2xl font-medium tracking-tighter sm:pr-1 sm:border-r sm:border-[rgb(var(--primary),0.25)]"
       >
-        untaledinson...
+        untaledinson.
       </h2>
     </a>
     <nav
-      class="flex flex-wrap items-center sm:justify-center justify-between gap-3 sm:gap-6"
+      class="flex flex-wrap items-center sm:justify-center justify-between gap-3 sm:gap-6 animate-fade-in-left"
     >
       <HeaderLink href="/blog">
         <svg
@@ -65,7 +61,7 @@ import Logo from "../icons/Logo.astro";
           >Proyectos</span
         >
       </HeaderLink>
-      <HeaderLink href="#">
+      <HeaderLink href="/tools">
         <svg
           xmlns="http://www.w3.org/2000/svg"
           width="24"
@@ -104,7 +100,15 @@ import Logo from "../icons/Logo.astro";
 </header>
 
 <style>
+  @import "tailwindcss";
   @plugin '@midudev/tailwind-animations';
+
+  header {
+    @apply text-white/55 font-[family-name:var(--body)] sticky top-0 z-20 bg-[rgb(var(--black),0.20)] backdrop-blur-md backdrop-saturate-150 shadow-[0_0_25px_rgb(var(--black),0.45)] w-full bg-linear-to-br from-[rgb(var(--dark),0.20)] via-[rgb(var(--primary),0.05)] to-[rgb(var(--black),0.20)] border-b border-[rgb(var(--primary),0.05)] mb-[36px] md:mb-[56px];
+    section{
+      @apply max-w-[700px] p-4 md:px-0 flex flex-row flex-wrap items-center justify-between md:mx-auto;
+    }
+  }
   span {
     position: relative;
     transition: all 0.3s ease;
@@ -123,30 +127,5 @@ import Logo from "../icons/Logo.astro";
     &:hover::after {
       transform: scaleX(1);
     }
-  }
-  .rotacion {
-    transition-property: transform;
-    transition-duration: 0.3s;
-    transition-delay: 0s;
-    &:hover {
-      transform: rotate(360deg);
-      color: rgb(var(--light), 0.65);
-    }
-  }
-  .menu {
-    animation: fade-in-left 0.6s ease-out;
-  }
-  .favicon{
-    animation: rotate-in .8s ease-out;
-  }
-  /* @keyframes fade-in-left {
-    0% {
-      opacity: 0;
-      transform: translateX(20px);
-    }
-    100% {
-      opacity: 1;
-      transform: translateX(0);
-    } 
-  }*/
+  }  
 </style>
