--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -4,27 +4,17 @@
 
 :root {
 	/* Colors */
-	--primary: 240, 145, 70;
-	/*#F09146*/
-	--secondary: 18, 26, 40;
-	/*#121A28*/
-	--accent: 162, 48, 4;
-	/*#A23004*/
+	--primary: 240, 145, 70;	/*#F09146 orange-400*/
+	--secondary: 18, 26, 40;	/*#121A28*/
+	--accent: 162, 48, 4;	/*#A23004*/
 
-	--accent-dark: 81, 48, 4;
-	/*#513004*/
-	--dark: 30, 37, 44;
-	/*#1E252C*/
-	--light: 255, 254, 254;
-	/*#FFFEFE*/
-	--black: 15, 18, 25;
-	/*#0f1219*/
-	--gray: 52, 66, 86;
-	/*#344256*/
-	--gray-light: 229, 233, 240;
-	/*#e5e9f0*/
-	--gray-dark: 34, 41, 57;
-	/*#222939*/
+	--accent-dark: 81, 48, 4;	/*#513004*/
+	--dark: 30, 37, 44;	/*#1E252C*/
+	--light: 255, 254, 254;	/*#FFFEFE white*/
+	--black: 15, 18, 25;	/*#0f1219*/
+	--gray: 52, 66, 86;	/*#344256*/
+	--gray-light: 229, 233, 240;	/*#e5e9f0*/
+	--gray-dark: 34, 41, 57;	/*#222939*/
 	--gray-gradient: rgba(var(--gray-light), 50%), #fff;
 	/* Shadows*/
 	--box-shadow:
@@ -63,168 +53,6 @@ body {
 	}
 }
 
-/* Animations */
-
-@keyframes fade-in-left {
-	0% {
-		opacity: 0;
-		transform: translateX(20px);
-	}
-	100% {
-		opacity: 1;
-		transform: translateX(0);
-	}
-}
-@keyframes fade-in-up {
-	0%{
-		opacity: 0;
-		transform: translateY(20px);
-	}
-	100%{
-		opacity: 1;
-		transform: translateY(0);
-	}
-}
-@keyframes fade-in {
-	0% {
-		opacity: 0;
-	}
-	100% {
-		opacity: 1
-	}
-}
-@keyframes fade-in-right {
-	0%{ opacity: 0; transform: translateX(-20px);}
-	100%{ opacity: 1; transform: translateX(0);}
-}
-@keyframes rotate-in {
-	0% {
-		opacity: 0;
-		transform: rotate(-360deg);
-	}
-	100% {
-		opacity: 1;
-		transform: rotate(0deg);
-	}
-}
-
-@keyframes rotate-180 {
-	0% {
-		transform: rotate(0deg);
-	}
-	100% {
-		transform: rotate(180deg);
-	}
-}
-
-
-/* 
-body {
-	font-family: var(--body);
-	margin: 0;
-	padding: 0;
-	text-align: left;
-	background: linear-gradient(var(--gray-gradient)) no-repeat;
-	background-size: 100% 600px;
-	word-wrap: break-word;
-	overflow-wrap: break-word;
-	color: rgb(var(--gray-dark));
-	font-size: 16px;
-	line-height: 1.7;
-}
-main {
-	width: 720px;
-	max-width: calc(100% - 2em);
-	margin: auto;
-	padding: 3em 1em;
-}
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-	margin: 0 0 0.5rem 0;
-	color: rgb(var(--black));
-	line-height: 1.2;
-}
-h1 {
-	font-size: 3.052em;
-}
-h2 {
-	font-size: 2.441em;
-}
-h3 {
-	font-size: 1.953em;
-}
-h4 {
-	font-size: 1.563em;
-}
-h5 {
-	font-size: 1.25em;
-}
-strong,
-b {
-	font-weight: 700;
-}
-a {
-	color: var(--accent);
-}
-a:hover {
-	color: var(--accent);
-}
-p {
-	margin-bottom: 1em;
-}
-.prose p {
-	margin-bottom: 2em;
-}
-textarea {
-	width: 100%;
-	font-size: 16px;
-}
-input {
-	font-size: 16px;
-}
-table {
-	width: 100%;
-}
-img {
-	max-width: 100%;
-	height: auto;
-	border-radius: 8px;
-}
-code {
-	padding: 2px 5px;
-	background-color: rgb(var(--gray-light));
-	border-radius: 2px;
-}
-pre {
-	padding: 1.5em;
-	border-radius: 8px;
-}
-pre > code {
-	all: unset;
-}
-blockquote {
-	border-left: 4px solid var(--accent);
-	padding: 0 0 0 20px;
-	margin: 0px;
-	font-size: 1.333em;
-}
-hr {
-	border: none;
-	border-top: 1px solid rgb(var(--gray-light));
-}
-@media (max-width: 720px) {
-	body {
-		font-size: 18px;
-	}
-	main {
-		padding: 1em;
-	}
-} */
-
 .sr-only {
 	border: 0;
 	padding: 0;
@@ -232,13 +60,9 @@ hr {
 	position: absolute !important;
 	height: 1px;
 	width: 1px;
-	overflow: hidden;
-	/* IE6, IE7 - a 0 height clip, off to the bottom right of the visible 1px box */
-	clip: rect(1px 1px 1px 1px);
-	/* maybe deprecated but we need to support legacy browsers */
-	clip: rect(1px, 1px, 1px, 1px);
-	/* modern browsers, clip-path works inwards from each corner */
-	clip-path: inset(50%);
-	/* added line to stop words getting smushed together (as they go onto separate lines and some screen readers do not understand line feeds as a space */
+	overflow: hidden;	
+	clip: rect(1px 1px 1px 1px);	
+	clip: rect(1px, 1px, 1px, 1px);	
+	clip-path: inset(50%);	
 	white-space: nowrap;
 }
